<!--suppress VulnerableLibrariesLocal -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>xspanger.GlobalQuake</groupId>
	<artifactId>GlobalQuake</artifactId>
	<version>0.11.0_pre-2</version>
	<packaging>pom</packaging>
	<modules>
		<module>GlobalQuakeClient</module>
		<module>GlobalQuakeCore</module>
		<module>GlobalQuakeAPI</module>
		<module>GlobalQuakeServer</module>
    </modules>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

    <dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>
	</dependencies>

</project>